--- a/packages/rettangoli-ui/viz/specs/view/align/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/align/0001.html
@@ -4,9 +4,9 @@ specs:
     - test various combinations of ah and av
 ---
 
-<rtgl-view g="m" p="l" wh="f" fw="w">
+<rtgl-view g="md" p="lg" wh="f" fw="w">
 
-    <rtgl-view d="h" g="m">
+    <rtgl-view d="h" g="md">
         <rtgl-view bgc="mu" wh="40">
             <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
@@ -38,7 +38,7 @@ specs:
         </rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" g="m">
+    <rtgl-view d="h" g="md">
         <rtgl-view bgc="mu" wh="40" av="c">
             <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
@@ -70,7 +70,7 @@ specs:
         </rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" g="m">
+    <rtgl-view d="h" g="md">
         <rtgl-view bgc="mu" wh="40" av="e">
             <rtgl-view bgc="ac" wh="12"></rtgl-view>
         </rtgl-view>
