--- a/packages/rettangoli-ui/viz/specs/view/align/0002.html
+++ b/packages/rettangoli-ui/viz/specs/view/align/0002.html
@@ -4,44 +4,44 @@ specs:
     - test various combinations of ah and av
 ---
 
-<rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-  <rtgl-view d="h" bgc="mu" wh="40" g="s">
+<rtgl-view d="h" g="md" p="lg" wh="f" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="40" g="sm">
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="40" ah="c" g="s">
+  <rtgl-view d="h" bgc="mu" wh="40" ah="c" g="sm">
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="40" ah="e" g="s">
-    <rtgl-view bgc="ac" wh="12"></rtgl-view>
-    <rtgl-view bgc="ac" wh="12"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view d="h" bgc="mu" wh="40" av="c" g="s">
-    <rtgl-view bgc="ac" wh="12"></rtgl-view>
-    <rtgl-view bgc="ac" wh="12"></rtgl-view>
-  </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="40" ah="c" av="c" g="s">
-    <rtgl-view bgc="ac" wh="12"></rtgl-view>
-    <rtgl-view bgc="ac" wh="12"></rtgl-view>
-  </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="40" ah="e" av="c" g="s">
+  <rtgl-view d="h" bgc="mu" wh="40" ah="e" g="sm">
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="40" av="e" g="s">
+  <rtgl-view d="h" bgc="mu" wh="40" av="c" g="sm">
+    <rtgl-view bgc="ac" wh="12"></rtgl-view>
+    <rtgl-view bgc="ac" wh="12"></rtgl-view>
+  </rtgl-view>
+  <rtgl-view d="h" bgc="mu" wh="40" ah="c" av="c" g="sm">
+    <rtgl-view bgc="ac" wh="12"></rtgl-view>
+    <rtgl-view bgc="ac" wh="12"></rtgl-view>
+  </rtgl-view>
+  <rtgl-view d="h" bgc="mu" wh="40" ah="e" av="c" g="sm">
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="40" ah="c" av="e" g="s">
+  <rtgl-view d="h" bgc="mu" wh="40" av="e" g="sm">
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="40" ah="e" av="e" g="s">
+  <rtgl-view d="h" bgc="mu" wh="40" ah="c" av="e" g="sm">
+    <rtgl-view bgc="ac" wh="12"></rtgl-view>
+    <rtgl-view bgc="ac" wh="12"></rtgl-view>
+  </rtgl-view>
+
+  <rtgl-view d="h" bgc="mu" wh="40" ah="e" av="e" g="sm">
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
     <rtgl-view bgc="ac" wh="12"></rtgl-view>
   </rtgl-view>
