--- a/packages/rettangoli-ui/viz/specs/view/bgc/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/bgc/0001.html
@@ -2,7 +2,7 @@
 title: "Background Color"
 ---
 
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
   <rtgl-view bgc="pr" wh="20"> </rtgl-view>
   <rtgl-view bgc="se" wh="20"> </rtgl-view>
   <rtgl-view bgc="de" wh="20"> </rtgl-view>
