--- a/packages/rettangoli-ui/viz/specs/view/border/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/border/0001.html
@@ -1,11 +1,11 @@
 ---
 title: Border width
 ---
-<rtgl-view d="h" g="m" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="md" p="lg" wh="f" fw="w">
     <rtgl-view bgc="mu" bw="xs" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bw="s" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bw="m" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bw="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="sm" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="md" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bw="lg" wh="50"></rtgl-view>
     <rtgl-view bgc="mu" bw="xl" wh="50"></rtgl-view>
 
     <rtgl-view bgc="mu" bwt="xs" wh="50"></rtgl-view>
