--- a/packages/rettangoli-ui/viz/specs/view/br/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/br/0001.html
@@ -1,25 +1,25 @@
 ---
 title: View - Border Radius
 ---
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view bgc="mu" wh="50" br="xs"></rtgl-view>
-    <rtgl-view bgc="mu" wh="50" br="s"></rtgl-view>
-    <rtgl-view bgc="mu" wh="50" br="m"></rtgl-view>
-    <rtgl-view bgc="mu" wh="50" br="l"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" br="sm"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" br="md"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" br="lg"></rtgl-view>
     <rtgl-view bgc="mu" wh="50" br="xl"></rtgl-view>
     <rtgl-view bgc="mu" wh="50" br="f"></rtgl-view>
 
     <rtgl-view bgc="mu" w="20" h="50" br="xs"></rtgl-view>
-    <rtgl-view bgc="mu" w="20" h="50" br="s"></rtgl-view>
-    <rtgl-view bgc="mu" w="20" h="50" br="m"></rtgl-view>
-    <rtgl-view bgc="mu" w="20" h="50" br="l"></rtgl-view>
+    <rtgl-view bgc="mu" w="20" h="50" br="sm"></rtgl-view>
+    <rtgl-view bgc="mu" w="20" h="50" br="md"></rtgl-view>
+    <rtgl-view bgc="mu" w="20" h="50" br="lg"></rtgl-view>
     <rtgl-view bgc="mu" w="20" h="50" br="xl"></rtgl-view>
     <rtgl-view bgc="mu" w="20" h="50" br="f"></rtgl-view>
 
     <rtgl-view bgc="mu" w="50" h="20" br="xs"></rtgl-view>
-    <rtgl-view bgc="mu" w="50" h="20" br="s"></rtgl-view>
-    <rtgl-view bgc="mu" w="50" h="20" br="m"></rtgl-view>
-    <rtgl-view bgc="mu" w="50" h="20" br="l"></rtgl-view>
+    <rtgl-view bgc="mu" w="50" h="20" br="sm"></rtgl-view>
+    <rtgl-view bgc="mu" w="50" h="20" br="md"></rtgl-view>
+    <rtgl-view bgc="mu" w="50" h="20" br="lg"></rtgl-view>
     <rtgl-view bgc="mu" w="50" h="20" br="xl"></rtgl-view>
     <rtgl-view bgc="mu" w="50" h="20" br="f"></rtgl-view>
 </rtgl-view>
