--- a/packages/rettangoli-ui/viz/specs/view/dimentions/0004.html
+++ b/packages/rettangoli-ui/viz/specs/view/dimentions/0004.html
@@ -5,14 +5,14 @@ specs:
   - h="f" should fill the height
   - wf="f" should fill the width and height
 ---
-<rtgl-view bgc="mu" g="l" p="l" w="100" h="100">
+<rtgl-view bgc="mu" g="lg" p="lg" w="100" h="100">
     <rtgl-view bgc="ac" w="20" h="f"></rtgl-view>
 </rtgl-view>
 
-<rtgl-view bgc="mu" g="l" p="l" w="100" h="100">
+<rtgl-view bgc="mu" g="lg" p="lg" w="100" h="100">
     <rtgl-view bgc="ac" w="f" h="20"></rtgl-view>
 </rtgl-view>
 
-<rtgl-view bgc="mu" g="l" p="l" w="100" h="100">
+<rtgl-view bgc="mu" g="lg" p="lg" w="100" h="100">
     <rtgl-view bgc="ac" wh="f"></rtgl-view>
 </rtgl-view>
