--- a/packages/rettangoli-ui/viz/specs/view/direction/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/direction/0001.html
@@ -5,16 +5,16 @@ specs:
   - with `d="v"`, direction should be vertical
   - with `d="h"`, direction should be horizontal
 ---
-<rtgl-view d="h" g="l" p="l" wh="f">
-    <rtgl-view bgc="mu" wh="100" g="m" p="m">
+<rtgl-view d="h" g="lg" p="lg" wh="f">
+    <rtgl-view bgc="mu" wh="100" g="md" p="md">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="v" bgc="mu" wh="100" g="m" p="m">
+    <rtgl-view d="v" bgc="mu" wh="100" g="md" p="md">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="mu" wh="100" g="m" p="m">
+    <rtgl-view d="h" bgc="mu" wh="100" g="md" p="md">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
