--- a/packages/rettangoli-ui/viz/specs/view/hidden/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/hidden/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Hidden
 ---
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view d="h" bgc="mu" wh="100" >
     </rtgl-view>
     <rtgl-view hidden d="h" bgc="mu" wh="100">
