--- a/packages/rettangoli-ui/viz/specs/view/margin/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/margin/0001.html
@@ -9,18 +9,18 @@ specs:
   - mv="xs" should set the vertical margin to spacing size
   - mh="xs" should set the horizontal margin to spacing size
 ---
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" mt="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mt="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mt="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mt="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mt="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mt="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mt="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" mt="xl"></rtgl-view>
@@ -30,13 +30,13 @@ specs:
         <rtgl-view bgc="ac" wh="50" mr="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mr="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mr="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mr="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mr="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mr="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mr="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" mr="xl"></rtgl-view>
@@ -46,13 +46,13 @@ specs:
         <rtgl-view bgc="ac" wh="50" ml="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" ml="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" ml="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" ml="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" ml="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" ml="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" ml="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" ml="xl"></rtgl-view>
@@ -62,13 +62,13 @@ specs:
         <rtgl-view bgc="ac" wh="50" mb="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mb="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mb="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mb="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mb="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mb="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mb="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" mb="xl"></rtgl-view>
@@ -78,13 +78,13 @@ specs:
         <rtgl-view bgc="ac" wh="50" m="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" m="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" m="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" m="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" m="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" m="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" m="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" m="xl"></rtgl-view>
@@ -94,13 +94,13 @@ specs:
         <rtgl-view bgc="ac" wh="50" mv="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mv="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mv="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mv="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mv="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mv="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mv="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" mv="xl"></rtgl-view>
@@ -110,13 +110,13 @@ specs:
         <rtgl-view bgc="ac" wh="50" mh="xs"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mh="s"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mh="sm"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mh="m"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mh="md"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
-        <rtgl-view bgc="ac" wh="50" mh="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="50" mh="lg"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu">
         <rtgl-view bgc="ac" wh="50" mh="xl"></rtgl-view>
