--- a/packages/rettangoli-ui/viz/specs/view/padding/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/padding/0001.html
@@ -1,17 +1,17 @@
 ---
 title: Padding
 ---
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view bgc="mu" pt="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pt="s">
+    <rtgl-view bgc="mu" pt="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pt="m">
+    <rtgl-view bgc="mu" pt="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pt="l">
+    <rtgl-view bgc="mu" pt="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" pt="xl">
@@ -21,13 +21,13 @@ title: Padding
     <rtgl-view bgc="mu" pr="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pr="s">
+    <rtgl-view bgc="mu" pr="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pr="m">
+    <rtgl-view bgc="mu" pr="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pr="l">
+    <rtgl-view bgc="mu" pr="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" pr="xl">
@@ -37,13 +37,13 @@ title: Padding
     <rtgl-view bgc="mu" pl="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pl="s">
+    <rtgl-view bgc="mu" pl="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pl="m">
+    <rtgl-view bgc="mu" pl="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pl="l">
+    <rtgl-view bgc="mu" pl="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" pl="xl">
@@ -53,13 +53,13 @@ title: Padding
     <rtgl-view bgc="mu" pb="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pb="s">
+    <rtgl-view bgc="mu" pb="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pb="m">
+    <rtgl-view bgc="mu" pb="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pb="l">
+    <rtgl-view bgc="mu" pb="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" pb="xl">
@@ -69,13 +69,13 @@ title: Padding
     <rtgl-view bgc="mu" p="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" p="s">
+    <rtgl-view bgc="mu" p="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" p="m">
+    <rtgl-view bgc="mu" p="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" p="l">
+    <rtgl-view bgc="mu" p="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" p="xl">
@@ -85,13 +85,13 @@ title: Padding
     <rtgl-view bgc="mu" ph="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" ph="s">
+    <rtgl-view bgc="mu" ph="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" ph="m">
+    <rtgl-view bgc="mu" ph="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" ph="l">
+    <rtgl-view bgc="mu" ph="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" ph="xl">
@@ -101,13 +101,13 @@ title: Padding
     <rtgl-view bgc="mu" pv="xs">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pv="s">
+    <rtgl-view bgc="mu" pv="sm">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pv="m">
+    <rtgl-view bgc="mu" pv="md">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" pv="l">
+    <rtgl-view bgc="mu" pv="lg">
         <rtgl-view bgc="ac" wh="50"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" pv="xl">
