--- a/packages/rettangoli-ui/viz/specs/view/responsive/0005.html
+++ b/packages/rettangoli-ui/viz/specs/view/responsive/0005.html
@@ -1,8 +1,8 @@
 ---
 title: Responsive 5
 ---
-<rtgl-view g="xl" p="l" wh="f">
-  <rtgl-view d="h" g="m" h="200">
+<rtgl-view g="xl" p="lg" wh="f">
+  <rtgl-view d="h" g="md" h="200">
     <rtgl-view bgc="mu"  wh="200" sm-hidden>
     </rtgl-view>
     <rtgl-view bgc="ec"  wh="200" lg-hidden>
