--- a/packages/rettangoli-ui/viz/specs/view/shadow/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/shadow/0001.html
@@ -2,7 +2,7 @@
 title: Shadow
 ---
 <rtgl-view d="h" g="xl" p="xl" wh="f">
-    <rtgl-view bgc="mu" wh="50" shadow="s"></rtgl-view>
-    <rtgl-view bgc="mu" wh="50" shadow="m"></rtgl-view>
-    <rtgl-view bgc="mu" wh="50" shadow="l"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" shadow="sm"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" shadow="md"></rtgl-view>
+    <rtgl-view bgc="mu" wh="50" shadow="lg"></rtgl-view>
 </rtgl-view>
