--- a/packages/rettangoli-ui/viz/specs/view/zindex/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/zindex/0001.html
@@ -2,7 +2,7 @@
 title: Z-index
 ---
 
-<rtgl-view d="h" g="l" p="l" wh="f">
+<rtgl-view d="h" g="lg" p="lg" wh="f">
   <rtgl-view bgc="mu" wh="120" pos="rel">
     <rtgl-view pos="abs" bgc="e" wh="84"></rtgl-view>
     <rtgl-view pos="abs" bgc="such" wh="64"></rtgl-view>
