--- a/packages/rettangoli-ui/viz/specs/view/align/0003.html
+++ b/packages/rettangoli-ui/viz/specs/view/align/0003.html
@@ -4,108 +4,108 @@ specs:
     - test various combinations of ah and av for flex wrap items
 ---
 
-<rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-  <rtgl-view d="h" bgc="mu" wh="80" g="s" fw="w">
+<rtgl-view d="h" g="md" p="lg" wh="f" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="80" ah="c" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="80" ah="e" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="80" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="80" av="c" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" av="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view d="h" bgc="mu" wh="80" av="e" g="s" fw="w">
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view d="h" bgc="mu" wh="80" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" av="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" av="c" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" av="e" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" av="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" ah="c" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" av="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" ah="c" av="c" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" ah="c" av="e" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="c" av="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" ah="e" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="c" av="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" ah="e" av="c" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" ah="e" av="e" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="e" av="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" bgc="mu" wh="80" g="s" fw="w">
+  <rtgl-view d="h" bgc="mu" wh="80" ah="e" av="e" g="sm" fw="w">
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+  </rtgl-view>
+
+  <rtgl-view d="h" bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
