--- a/packages/rettangoli-ui/viz/specs/view/align/0004.html
+++ b/packages/rettangoli-ui/viz/specs/view/align/0004.html
@@ -2,109 +2,109 @@
 title: Align (Flex wrap items direction vertical)
 ---
 
-<rtgl-view d="h" g="m" p="l" wh="f" fw="w">
-  <rtgl-view bgc="mu" wh="80" g="s" fw="w">
+<rtgl-view d="h" g="md" p="lg" wh="f" fw="w">
+  <rtgl-view bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
   <!-- TODO fix inconsisteincies between justify and align -->
-  <rtgl-view bgc="mu" wh="80" ah="c" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" ah="e" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" av="c" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" av="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" av="e" g="s" fw="w">
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-    <rtgl-view bgc="ac" wh="20"></rtgl-view>
-  </rtgl-view>
-
-  <rtgl-view bgc="mu" wh="80" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" av="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" av="c" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" av="e" g="s" fw="w">
+  <rtgl-view bgc="mu" wh="80" av="c" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" ah="c" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" av="e" g="sm" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" ah="c" av="c" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="c" g="md" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" ah="c" av="e" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="c" av="c" g="md" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" ah="e" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="c" av="e" g="md" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" ah="e" av="c" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="e" g="md" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" ah="e" av="e" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="e" av="c" g="md" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
   </rtgl-view>
 
-  <rtgl-view bgc="mu" wh="80" g="m" fw="w">
+  <rtgl-view bgc="mu" wh="80" ah="e" av="e" g="md" fw="w">
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+    <rtgl-view bgc="ac" wh="20"></rtgl-view>
+  </rtgl-view>
+
+  <rtgl-view bgc="mu" wh="80" g="md" fw="w">
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
