--- a/packages/rettangoli-ui/viz/specs/view/align/0005.html
+++ b/packages/rettangoli-ui/viz/specs/view/align/0005.html
@@ -2,24 +2,24 @@
 title: Align (mixed items)
 ---
 
-<rtgl-view g="m" p="l" wh="f" fw="w">
-  <rtgl-view d="h" g="l">
-    <rtgl-view bgc="mu" wh="80" g="s">
+<rtgl-view g="md" p="lg" wh="f" fw="w">
+  <rtgl-view d="h" g="lg">
+    <rtgl-view bgc="mu" wh="80" g="sm">
       <rtgl-view bgc="mu" h="20" w="20"></rtgl-view>
       <rtgl-view bgc="mu" h="20" w="f"></rtgl-view>
       <rtgl-view bgc="mu" h="20" stretch></rtgl-view>
     </rtgl-view>
-    <rtgl-view bgc="mu" wh="80" g="s" d="h">
+    <rtgl-view bgc="mu" wh="80" g="sm" d="h">
       <rtgl-view bgc="mu" h="20" w="20"></rtgl-view>
       <rtgl-view bgc="mu" h="f" w="20"></rtgl-view>
       <rtgl-view bgc="mu" stretch w="20"></rtgl-view>
     </rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" g="l">
-    <rtgl-view d="h" flex="1" bgc="mu" av="c" pr="m">
+  <rtgl-view d="h" g="lg">
+    <rtgl-view d="h" flex="1" bgc="mu" av="c" pr="md">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="such" flex="1" av="c" pl="m">
+      <rtgl-view bgc="such" flex="1" av="c" pl="md">
         <rtgl-text s="bm" c="">Title</rtgl-text>
       </rtgl-view>
       <rtgl-view stretch bgc="such" av="c"
@@ -29,7 +29,7 @@ title: Align (mixed items)
 
     <rtgl-view d="h" flex="1" bgc="mu" av="c" h="100">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="such" flex="1" av="c" pl="m">
+      <rtgl-view bgc="such" flex="1" av="c" pl="md">
         <rtgl-text s="bm" c="">Title</rtgl-text>
       </rtgl-view>
       <rtgl-view stretch bgc="such" av="c"
@@ -39,7 +39,7 @@ title: Align (mixed items)
 
     <rtgl-view d="h" flex="1" bgc="mu" av="c" h="100" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="such" flex="1" av="c" pl="m">
+      <rtgl-view bgc="such" flex="1" av="c" pl="md">
         <rtgl-text s="bm" c="">Title</rtgl-text>
       </rtgl-view>
       <rtgl-view h="f" bgc="such" av="c"
@@ -48,10 +48,10 @@ title: Align (mixed items)
     </rtgl-view>
   </rtgl-view>
 
-  <rtgl-view d="h" g="l">
+  <rtgl-view d="h" g="lg">
     <rtgl-view flex="1" bgc="mu" av="c"  ah="c" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="such" flex="1" av="c" pl="m">
+      <rtgl-view bgc="such" flex="1" av="c" pl="md">
         <rtgl-text s="bm" c="">Title</rtgl-text>
       </rtgl-view>
       <rtgl-view w="f" bgc="such" ah="c"
@@ -60,7 +60,7 @@ title: Align (mixed items)
     </rtgl-view>
     <rtgl-view flex="1" bgc="mu" av="c" ah="c" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="such" flex="1" av="c" pl="m">
+      <rtgl-view bgc="such" flex="1" av="c" pl="md">
         <rtgl-text s="bm" c="">Title</rtgl-text>
       </rtgl-view>
       <rtgl-view stretch bgc="such" ah="c"
