--- a/packages/rettangoli-ui/viz/specs/view/bgc/0002.html
+++ b/packages/rettangoli-ui/viz/specs/view/bgc/0002.html
@@ -59,37 +59,37 @@ ss
 screen-instruc-end
 -->
 
-<rtgl-view g="s" p="l" wh="f" fw="w">
+<rtgl-view g="sm" p="lg" wh="f" fw="w">
   <rtgl-view d="h">
-    <rtgl-view h-bgc="ac" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="such" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="p" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="pc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="s" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="sc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="e" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view h-bgc="ec" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view h-bgc="isu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view h-bgc="o" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view h-bgc="ov" wh="40" g="m" p="m"></rtgl-view>
+    <rtgl-view h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="such" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="p" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="pc" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="s" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="sc" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="e" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="ec" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="isu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view h-bgc="o" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view h-bgc="ov" wh="40" g="md" p="md"></rtgl-view>
   </rtgl-view>
 
   <rtgl-view d="h">
-    <rtgl-view bgc="mu" h-bgc="ac" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="such" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="p" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="pc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="s" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="sc" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="e" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="ec" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="isu" wh="40" g="m" p="m"> </rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="o" wh="40" g="m" p="m"></rtgl-view>
-    <rtgl-view bgc="mu" h-bgc="ov" wh="40" g="m" p="m"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ac" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="mu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="such" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="p" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="pc" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="s" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="sc" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="e" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ec" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="isu" wh="40" g="md" p="md"> </rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="o" wh="40" g="md" p="md"></rtgl-view>
+    <rtgl-view bgc="mu" h-bgc="ov" wh="40" g="md" p="md"></rtgl-view>
   </rtgl-view>
 
 </rtgl-view>
