--- a/packages/rettangoli-ui/viz/specs/view/bgc/0003.html
+++ b/packages/rettangoli-ui/viz/specs/view/bgc/0003.html
@@ -2,9 +2,9 @@
 title: "Background color (TBD)"
 ---
 
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-  <rtgl-view wh="80" g="m" p="m" s-bgc="e"> </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" g="m" p="m" s-bgc="e"> </rtgl-view>
-  <rtgl-view wh="80" g="m" p="m" s-h-bgc="e"> </rtgl-view>
-  <rtgl-view bgc="mu" wh="80" g="m" p="m" s-h-bgc="e"> </rtgl-view>
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
+  <rtgl-view wh="80" g="md" p="md" s-bgc="e"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="80" g="md" p="md" s-bgc="e"> </rtgl-view>
+  <rtgl-view wh="80" g="md" p="md" s-h-bgc="e"> </rtgl-view>
+  <rtgl-view bgc="mu" wh="80" g="md" p="md" s-h-bgc="e"> </rtgl-view>
 </rtgl-view>
