--- a/packages/rettangoli-ui/viz/specs/view/dimentions/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/dimentions/0001.html
@@ -5,7 +5,7 @@ specs:
   - h="10" should set the height to 10 in pixels
   - wh="10" should set the width to 10 and height to 10 in pixels
 ---
-<rtgl-view bgc="mu" g="l" p="l">
+<rtgl-view bgc="mu" g="lg" p="lg">
     <rtgl-view bgc="ac" w="10" h="20"></rtgl-view>
     <rtgl-view bgc="ac" w="20" h="10"></rtgl-view>
     <rtgl-view bgc="ac" wh="20"></rtgl-view>
