--- a/packages/rettangoli-ui/viz/specs/view/dimentions/0003.html
+++ b/packages/rettangoli-ui/viz/specs/view/dimentions/0003.html
@@ -1,20 +1,20 @@
 ---
 title: Dimensions width and height using spacing
 specs:
-  - w="s" should set the width to spacing size
-  - h="s" should set the height to spacing size
-  - wh="s" should set the width and height to spacing size
+  - w="sm" should set the width to spacing size
+  - h="sm" should set the height to spacing size
+  - wh="sm" should set the width and height to spacing size
 ---
-<rtgl-view bgc="mu" g="l" p="l">
+<rtgl-view bgc="mu" g="lg" p="lg">
     <rtgl-view bgc="ac" w="xs" h="xs"></rtgl-view>
-    <rtgl-view bgc="ac" w="s" h="s"></rtgl-view>
-    <rtgl-view bgc="ac" w="m" h="m"></rtgl-view>
-    <rtgl-view bgc="ac" w="l" h="l"></rtgl-view>
+    <rtgl-view bgc="ac" w="sm" h="sm"></rtgl-view>
+    <rtgl-view bgc="ac" w="md" h="md"></rtgl-view>
+    <rtgl-view bgc="ac" w="lg" h="lg"></rtgl-view>
     <rtgl-view bgc="ac" w="xl" h="xl"></rtgl-view>
 
     <rtgl-view bgc="ac" wh="xs"></rtgl-view>
-    <rtgl-view bgc="ac" wh="s"></rtgl-view>
-    <rtgl-view bgc="ac" wh="m"></rtgl-view>
-    <rtgl-view bgc="ac" wh="l"></rtgl-view>
+    <rtgl-view bgc="ac" wh="sm"></rtgl-view>
+    <rtgl-view bgc="ac" wh="md"></rtgl-view>
+    <rtgl-view bgc="ac" wh="lg"></rtgl-view>
     <rtgl-view bgc="ac" wh="xl"></rtgl-view>
 </rtgl-view>
