--- a/packages/rettangoli-ui/viz/specs/view/gap/0003.html
+++ b/packages/rettangoli-ui/viz/specs/view/gap/0003.html
@@ -3,8 +3,8 @@ title: Gap Vertical
 specs:
   - gv="xs" should set the vertical gap to spacing size
 ---
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
-    <rtgl-view d="h" bgc="mu" w="100" gv="xs" p="m" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
+    <rtgl-view d="h" bgc="mu" w="100" gv="xs" p="md" fw="w">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
@@ -12,7 +12,7 @@ specs:
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="mu" w="100" gv="s" p="m" fw="w">
+    <rtgl-view d="h" bgc="mu" w="100" gv="sm" p="md" fw="w">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
@@ -20,7 +20,7 @@ specs:
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="mu" w="100" gv="m" p="m" fw="w">
+    <rtgl-view d="h" bgc="mu" w="100" gv="md" p="md" fw="w">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
@@ -28,7 +28,7 @@ specs:
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="mu" w="100" gv="l" p="m" fw="w">
+    <rtgl-view d="h" bgc="mu" w="100" gv="lg" p="md" fw="w">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
@@ -36,7 +36,7 @@ specs:
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
     </rtgl-view>
-    <rtgl-view d="h" bgc="mu" w="100" gv="xl" p="m" fw="w">
+    <rtgl-view d="h" bgc="mu" w="100" gv="xl" p="md" fw="w">
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
         <rtgl-view bgc="ac" wh="20"></rtgl-view>
