--- a/packages/rettangoli-ui/viz/specs/view/margin/0002.html
+++ b/packages/rettangoli-ui/viz/specs/view/margin/0002.html
@@ -2,8 +2,8 @@
 title: Margin Full Width
 description: "Fixes CSS issue of width: 100% + margin.  Use stretch/fill-available to fix: https://caniuse.com/mdn-css_properties_width_stretch"
 ---
-<rtgl-view d="h" g="l" p="l" wh="f" fw="w">
+<rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view bgc="mu" wh="80">
-        <rtgl-view bgc="ac" wh="f" m="l"></rtgl-view>
+        <rtgl-view bgc="ac" wh="f" m="lg"></rtgl-view>
     </rtgl-view>
 </rtgl-view>
