--- a/packages/rettangoli-ui/viz/specs/view/opacity/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/opacity/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Opacity
 ---
-<rtgl-view d="h" g="l" p="l" wh="f">
+<rtgl-view d="h" g="lg" p="lg" wh="f">
     <rtgl-view bgc="mu" wh="100" op="0.1"></rtgl-view>
     <rtgl-view bgc="mu" wh="100" op="0.5"></rtgl-view>
     <rtgl-view bgc="mu" wh="100" op="1"></rtgl-view>
