--- a/packages/rettangoli-ui/viz/specs/view/position/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/position/0001.html
@@ -1,7 +1,7 @@
 ---
 title: Position absolute (top and bottom)
 ---
-<rtgl-view d="h" g="l" p="l" wh="f">
+<rtgl-view d="h" g="lg" p="lg" wh="f">
     <rtgl-view bgc="mu" pos="fix" cor="top" h="100">
     </rtgl-view>
     <rtgl-view bgc="mu" pos="fix" cor="bottom" h="100">
