--- a/packages/rettangoli-ui/viz/specs/view/position/0002.html
+++ b/packages/rettangoli-ui/viz/specs/view/position/0002.html
@@ -1,7 +1,7 @@
 ---
 title: Position absolute (left and right)
 ---
-<rtgl-view d="h" g="l" p="l" wh="f">
+<rtgl-view d="h" g="lg" p="lg" wh="f">
     <rtgl-view bgc="mu" pos="fix" cor="left" w="100">
     </rtgl-view>
     <rtgl-view bgc="mu" pos="fix" cor="right" w="100"">
