--- a/packages/rettangoli-ui/viz/specs/view/position/0003.html
+++ b/packages/rettangoli-ui/viz/specs/view/position/0003.html
@@ -1,7 +1,7 @@
 ---
 title: Position relative
 ---
-<rtgl-view d="h" g="l" p="l" wh="f">
+<rtgl-view d="h" g="lg" p="lg" wh="f">
     <rtgl-view bgc="mu" wh="80" pos="rel">
         <rtgl-view pos="abs" cor="bottom" bgc="ac" h="24"></rtgl-view>
         <rtgl-view pos="abs" cor="top" bgc="ac" h="24"></rtgl-view>
