--- a/packages/rettangoli-ui/viz/specs/view/responsive/0004.html
+++ b/packages/rettangoli-ui/viz/specs/view/responsive/0004.html
@@ -1,8 +1,8 @@
 ---
 title: Responsive 4
 ---
-<rtgl-view g="xl" p="l" wh="f">
-  <rtgl-view d="h" g="m" h="200">
+<rtgl-view g="xl" p="lg" wh="f">
+  <rtgl-view d="h" g="md" h="200">
     <rtgl-view bgc="s"  wh="200" sm-visible hidden>
     </rtgl-view>
     <rtgl-view bgc="sc"  wh="200" lg-visible hidden>
