--- a/packages/rettangoli-ui/viz/templates/default.html
+++ b/packages/rettangoli-ui/viz/templates/default.html
@@ -39,6 +39,7 @@
       }
     </script>
     <script src="/public/rettangoli.js"></script>
+    <script src="/public/main.js"></script>
   </head>
   <body class="dark">
     <div class="container">
