fix border specs file

--- a/packages/rettangoli-ui/viz/specs/view/border/0001.html
+++ b/packages/rettangoli-ui/viz/specs/view/border/0001.html
@@ -9,26 +9,26 @@ title: Border width
     <rtgl-view bgc="mu" bw="xl" wh="50"></rtgl-view>
 
     <rtgl-view bgc="mu" bwt="xs" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwt="s" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwt="m" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwt="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="sm" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="md" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwt="lg" wh="50"></rtgl-view>
     <rtgl-view bgc="mu" bwt="xl" wh="50"></rtgl-view>
 
     <rtgl-view bgc="mu" bwr="xs" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwr="s" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwr="m" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwr="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="sm" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="md" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwr="lg" wh="50"></rtgl-view>
     <rtgl-view bgc="mu" bwr="xl" wh="50"></rtgl-view>
 
     <rtgl-view bgc="mu" bwb="xs" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwb="s" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwb="m" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwb="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="sm" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="md" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwb="lg" wh="50"></rtgl-view>
     <rtgl-view bgc="mu" bwb="xl" wh="50"></rtgl-view>
 
     <rtgl-view bgc="mu" bwl="xs" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwl="s" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwl="m" wh="50"></rtgl-view>
-    <rtgl-view bgc="mu" bwl="l" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="sm" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="md" wh="50"></rtgl-view>
+    <rtgl-view bgc="mu" bwl="lg" wh="50"></rtgl-view>
     <rtgl-view bgc="mu" bwl="xl" wh="50"></rtgl-view>
 </rtgl-view>
