use .rettangoli.config.yaml

--- a/packages/rettangoli-vt/src/cli/templates/report.html
+++ b/packages/rettangoli-vt/src/cli/templates/report.html
@@ -39,12 +39,12 @@
       <rtgl-view w="f">
         <rtgl-view w="f" d="h" g="lg">
           <rtgl-view flex="1">
-            <rtgl-text>{{ file.goldPath }}</rtgl-text>
-            <img width="100%" src="/{{ file.goldPath }}">
+            <rtgl-text>{{ file.referencePath }}</rtgl-text>
+            <img width="100%" src="/{{ file.referencePath }}">
           </rtgl-view>
           <rtgl-view flex="1">
-            <rtgl-text>{{ file.artifactPath }}</rtgl-text>
-            <img width="100%" src="/{{ file.artifactPath }}">
+            <rtgl-text>{{ file.candidatePath }}</rtgl-text>
+            <img width="100%" src="/{{ file.candidatePath }}">
           </rtgl-view>
         </rtgl-view>
       </rtgl-view>
