fix vt commands

--- a/packages/rettangoli-vt/src/cli/templates/default.html
+++ b/packages/rettangoli-vt/src/cli/templates/default.html
@@ -39,6 +39,7 @@
       }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/rettangoli-ui@0.1.0-rc2/dist/rettangoli-iife-ui.min.js"></script>
+    <script src="/public/main.js"></script>
   </head>
   <body class="dark">
     <div class="container">
