--- a/packages/rettangoli-vt/src/cli/templates/index.html
+++ b/packages/rettangoli-vt/src/cli/templates/index.html
@@ -83,7 +83,7 @@
               <iframe
                 loading="lazy"
                 width="100%"
-                src="/artifacts/{{ file.path }}"
+                src="/candidate/{{ file.path }}"
                 frameborder="0"
                 style="
                       width: 1080px;
