--- a/packages/rettangoli-sites/src/cli/components/core/hero2.html
+++ b/packages/rettangoli-sites/src/cli/components/core/hero2.html
@@ -9,7 +9,7 @@
   <rtgl-text s="lg" ta="c"> {{ subtitle }} </rtgl-text>
   {%- endfor -%}
   {%- if hero.cta -%}
-  <rtgl-button mt="xl" t="p" href="{{ hero.cta.href }}" {% if hero.cta.openNewTab %}target="_blank" rel="noreferrer"{% endif %}> {{
+  <rtgl-button mt="xl" href="{{ hero.cta.href }}" {% if hero.cta.openNewTab %}target="_blank" rel="noreferrer"{% endif %}> {{
     hero.cta.text
     }} </rtgl-button>
   {%- endif -%}
