--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-1.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-1.html
@@ -7,6 +7,7 @@ title: "Basic"
 
 <script>
   const sidebar = document.getElementById('sidebar');
+  sidebar.selectedItemId = "about";
   sidebar.header = {
     label: "Sidebar",
     image: {
